# lm-chatbot

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
.meteor/: .id  packages
client/: main.css  main.html  main.tsx
imports/api/audio/: audio.methods.ts  audio.types.ts
imports/api/chat/: chat.methods.ts  chat.publications.ts
imports/api/chats/: chat.collection.ts  chat.methods.ts  chat.types.ts
imports/api/files/: file.collection.ts  file.methods.ts  file.types.ts
imports/api/lmstudio/: client.ts  lmstudio.methods.ts  lmstudio.service.ts  lmstudio.types.ts  type.ts
imports/api/messages/: message.collection.ts  message.methods.ts  message.publications.ts  message.types.ts
imports/api/ocr/: ocr.methods.ts  types.ts
imports/ui/: App.tsx
imports/ui/components/: AudioPlayerComponent.tsx  FileComponent.tsx  NameModal.tsx  NewChatModal.tsx  Toast.tsx  UploadFileButton.tsx
imports/ui/hooks/: chatSessionHelpers.ts  useChatHistory.ts  useChatSessions.ts  useChatState.ts  useSpeechPlayback.ts  useThreadBootstrap.ts
imports/ui/layouts/: MainLayout.tsx  SideBarLayout.tsx
imports/ui/types/: file.ts  session.ts
imports/ui/utils/: chatFormatter.ts  formatter.ts
media_analysis_service/: Dockerfile  app.py  pyproject.toml
media_analysis_service/src/: audio_analyzer.py  minio_client.py  settings.py
ocr_python/: app.py  requirements.txt
ocr_python/src/: app.py  minio_client.py  ocr_engine.py  sanitizer.py  settings.py
server/: main.ts
server/minio/: client.ts  upload.ts
tests/: main.ts
(+11 files in other folders)
